--- a/private-build-plans.toml
+++ b/private-build-plans.toml
@@ -6,24 +6,24 @@
 
 [buildPlans.legetur]
 family = "Legetur"
-spacing = "term"
+spacing = "normal"
 serifs = "sans"
-noCvSs = true
-exportGlyphNames = false
+no-cv-ss = true
+export-glyph-names = false
 
 [buildPlans.legetur.variants.design]
 capital-a = "straight-serifless"
-capital-c = "serifless"
-capital-g = "toothed-serifless-hooked"
+capital-c = "unilateral-inward-serifed"
+capital-g = "toothed-inward-serifed-hooked"
 capital-j = "flat-hook-serifed"
 capital-k = "symmetric-connected-serifless"
 capital-q = "crossing-curly-tailed"
-capital-s = "serifless"
+capital-s = "unilateral-inward-serifed"
 capital-u = "toothless-rounded-serifless"
 capital-w = "straight-serifless"
 a = "double-storey-serifless"
 b = "toothed-serifless"
-c = "serifless"
+c = "unilateral-inward-serifed"
 d = "toothed-serifless"
 f = "flat-hook-serifless"
 g = "double-storey-open"
@@ -33,8 +33,8 @@ k = "symmetric-connected-serifless"
 l = "serifed-semi-tailed"
 m = "serifless"
 q = "straight-serifless"
-r = "corner-hooked-serifed"
-s = "serifless"
+r = "corner-hooked-top-serifed"
+s = "unilateral-inward-serifed"
 t = "flat-hook"
 u = "toothed-serifless"
 w = "straight-flat-top-serifless"
@@ -42,9 +42,12 @@ y = "straight-turn-serifless"
 long-s = "flat-hook-tailed"
 eszet = "sulzbacher-descending-serifless"
 lower-eth = "straight-bar"
+lower-lambda = "straight-turn"
 lower-mu = "tailed-serifless"
+lower-chi = "semi-chancery-straight"
 cyrl-capital-ka = "symmetric-connected-serifless"
 cyrl-ka = "symmetric-connected-serifless"
+cyrl-capital-u = "straight-turn-serifless"
 cyrl-capital-ya = "straight-serifless"
 cyrl-ya = "straight-serifless"
 zero = "oval-tall-slashed-cutout"
@@ -53,10 +56,10 @@ two = "straight-neck"
 three = "flat-top"
 four = "semi-open"
 five = "oblique-arched"
-six = "open-contour"
+six = "straight-bar"
 seven = "bend-serifed"
 eight = "crossing-asymmetric"
-nine = "open-contour"
+nine = "straight-bar"
 diacritic-dot = "round"
 punctuation-dot = "round"
 asterisk = "penta-mid"
@@ -103,7 +106,7 @@ m = "serifless"
 n = "straight-serifless"
 p = "eared-serifless"
 q = "diagonal-tailed-serifless"
-r = "hookless-serifed"
+r = "top-serifed"
 s = "serifless"
 t = "diagonal-tailed-short-neck2"
 u = "toothed-serifless"
@@ -112,11 +115,12 @@ w = "cursive-serifless"
 x = "cursive"
 y = "cursive-serifless"
 z = "cursive"
-lower-lambda = "curly-turn"
-lower-chi = "straight-serifless"
+lower-lambda = "straight-turn"
+lower-chi = "semi-chancery-straight"
 cyrl-capital-ka = "symmetric-connected-serifless"
 cyrl-ka = "symmetric-connected-serifless"
 cyrl-em = "flat-bottom-serifless"
+cyrl-capital-u = "straight-turn-serifless"
 cyrl-capital-ya = "straight-serifless"
 cyrl-ya = "straight-serifless"
 seven = "bend-serifless"
